# CppND-CapStone-Compare-Folders-GUI-Tool

./: CMakeLists.txt  README.md
src/: UserDirectory.cpp  UserDirectory.h  main.cpp
